# CVision

./: CMakeLists.txt  CMakeListsLib.txt  CMakeListsTest.txt  Makefile  README.md  balldetector.cpp  balldetector.h  basedetector.cpp  basedetector.h  cameraholder.cpp  cameraholder.h  config.h  configdefinitions.h  cvision.cpp  cvision.h  goaldetector.cpp  goaldetector.h  kernalcv.cpp  kernalcv.h  kernelcv.cpp  kernelcv.h  main.cpp  markdetector.cpp  markdetector.h  qiproject.xml  remotevision.cpp  remotevision.h
build-linux-sdk/: CMakeCache.txt  Makefile  dependencies.cmake
build-linux-sdk/sdk/share/qi/: path.conf
include/: balldetector.h  cameraholder.h  config.h  configdefinitions.h  cvision.h  kernelcv.h
lib/: custom.cpp  custom.h  geometry.h  message.h
messenger/: Message.h
opencv_test/: CMakeLists.txt  main.cpp
src/: balldetector.cpp  cameraholder.cpp  goaldetector.cpp  kernelcv.cpp  remotevision.cpp
